--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,67 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  display: flex;
+  flex-direction: column;
+  background-color: #282c34;
+  color: white;
+  margin:0;
+  padding:0;
+  background-color: green;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #58595b;
+	color: rgba(255, 255, 255, 0.83);
+	padding: 1em;
+}
+
+.Main {
+  display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+  
+  width: 100%;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-nav {
+  -webkit-box-ordinal-group: 1;
+	-moz-box-ordinal-group: 1;
+	-ms-flex-order: 1;
+	-webkit-order: 1;
+	order: 1;
+  
+	-webkit-box-flex: 1;
+	-moz-box-flex: 1;	
+	-webkit-flex: 1;
+	-ms-flex: 1;
+	flex: 1;
+  
+  background-color: #282c34;
+	color: white;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-map {
+  -webkit-box-ordinal-group: 2;
+	-moz-box-ordinal-group: 2;
+	-ms-flex-order: 2;
+	-webkit-order: 2;
+	order: 2;
+  
+	-webkit-box-flex: 1;
+	-moz-box-flex: 1;
+	-webkit-flex: 1;
+	-ms-flex: 1;
+	flex: 1;
+  
+	background-color: #62626D;
+  
+}
+
+.App-footer {
+  background-color: #58595b;
+	color: rgba(255, 255, 255, 0.83);
+	padding: 1em;
 }
