--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,9 @@
 	color: white;
   
 }
+ul{
+	list-style: none;
+}
 
 .App-map {
   -webkit-box-ordinal-group: 2;
@@ -58,6 +61,10 @@
   
 	background-color: #62626D;
   
+}
+.info-window {
+	color: black;
+	background-color: white;
 }
 
 .App-footer {
