--- a/src/App.css
+++ b/src/App.css
@@ -9,37 +9,27 @@
 }
 
 .App-header {
-  background-color: #58595b;
-	color: rgba(255, 255, 255, 0.83);
+  background-color: black;
+	color: white;
 	padding: 1em;
+	height: 10vh;
+	text-align: center;
 }
+
 
 .Main {
-  display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-  
-  width: 100%;
-  color: white;
+  display: flex;
+	color: white;
+	background: #333333;
 }
 
-.App-nav {
-  -webkit-box-ordinal-group: 1;
-	-moz-box-ordinal-group: 1;
-	-ms-flex-order: 1;
-	-webkit-order: 1;
-	order: 1;
-  
-	-webkit-box-flex: 1;
-	-moz-box-flex: 1;	
-	-webkit-flex: 1;
-	-ms-flex: 1;
-	flex: 1;
-  
-  background-color: #282c34;
+.Main > nav {
+	flex: 0 0 30vw;  
+  background-color: #333333;
 	color: white;
+	order: -1;
+	text-align: left;
+	
   
 }
 ul{
@@ -47,19 +37,8 @@ ul{
 }
 
 .App-map {
-  -webkit-box-ordinal-group: 2;
-	-moz-box-ordinal-group: 2;
-	-ms-flex-order: 2;
-	-webkit-order: 2;
-	order: 2;
-  
-	-webkit-box-flex: 1;
-	-moz-box-flex: 1;
-	-webkit-flex: 1;
-	-ms-flex: 1;
 	flex: 1;
-  
-	background-color: #62626D;
+	
   
 }
 .info-window {
@@ -68,7 +47,28 @@ ul{
 }
 
 .App-footer {
-  background-color: #58595b;
-	color: rgba(255, 255, 255, 0.83);
+  background-color: black;;
+	color: white;
 	padding: 1em;
+	height: 5vh;
+	text-align: center;
 }
+
+.map-container {
+	widht: 100%;
+	height: 100%;
+	color: white;
+	background-color: black;
+}
+
+@media screen and (max-width: 575px) {
+  .Main {
+		display: block;
+	}
+	ul {
+		display: flex;
+		flex-flow: row wrap;		
+	}
+	
+}
+
