--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
 body {
   margin:0;
   padding:0;
+  display: flex;
+  flex-direction: column;
+  margin:0;
+  color: white;
+  background: black;
+  font-family: helvetica,tahoma, arial;
+  max-height:  100%;
+  max-width: 100%;
+
 }
